--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ logging.level.org.springframework.web=DEBUG
 logging.level.com.wechat.mq=DEBUG
 
 spring.jpa.database=mysql
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
