--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,10 @@ spring.datasource.username=root
 spring.datasource.password=kurimu
 spring.redis.database=0
 spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.password=
 spring.redis.pool.max-active=8
 spring.redis.pool.max-wait=-1
 spring.redis.pool.max-idle=8
 spring.redis.pool.min-idle=0
+
