add global json Exception handler add User UserToken WechatUser log wechat user location rename mq->mp

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-logging.level.org.springframework.web=DEBUG
-logging.level.com.wechat.mq=DEBUG
+logging.level.org.springframework.web=INFO
+logging.level.com.wechat=DEBUG
 
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
