--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <description>Wechat MP with spring boot</description>
 
     <properties>
-        <weixin-java-mp.version>2.5.1.BETA</weixin-java-mp.version>
+        <weixin-java-mp.version>2.6.0</weixin-java-mp.version>
 
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
